--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -102,5 +102,9 @@
   "unlocked_location": "Unlocked location",
   "@unlocked_location": {
     "description": "Snackbar text"
+  },
+  "retrieve": "Retrieve",
+  "@retrieve": {
+    "description": "Button text"
   }
 }
