Renamed 'Recommendations' to 'History'
The sidedrawer now reads 'History' instead of 'Recommendations'

--- a/lib/localization/app_en.arb
+++ b/lib/localization/app_en.arb
@@ -39,8 +39,8 @@
   "@continue_with_spotify": {
     "description": "Button text"
   },
-  "recommendations": "Recommendations",
-  "@recommendations": {
+  "history": "History",
+  "@history": {
     "description": "Button text"
   },
   "settings": "Settings",
